# lua-movement-sandbox

./: CMakeLists.txt
lib/sol/: config.hpp
scripts/: player.lua
src/: main.cpp
